add g1